--- a/index.html
+++ b/index.html
@@ -2,15 +2,12 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-	<link rel="icon" type="image/png" href="./favicon.png">
+	<link rel="icon" type="image/png" href="/favicon.png">
 	<link rel="stylesheet" type="text/css" href="./style.css">
 	<title>Elite Luke</title>
 </head>
 <body>
-	<div id="header">
-
-	</div>
-	<div id="main">
+	<div id="showcase">
 		<div class="container">
 			<div class="panel" id="panel-1">
 				<img src="./images/elite.png" />
@@ -21,31 +18,31 @@
 			<div class="panel" id="panel-2">
 				<img src="./images/in-usa.png" />
 				<div class="popup">
-					<p>Tourism in the United States.</p>
+					<p>USA travel and tourism services.</p>
 				</div>
 			</div>
 			<div class="panel" id="panel-3">
 				<img src="./images/in-china.png" />
 				<div class="popup">
-					<p>Tourism in China.</p>
+					<p>China travel and tourism services.</p>
 				</div>
 			</div>
 			<div class="panel" id="panel-4">
-				<img src="./images/package.png" />
+				<img src="./images/packaging.png" />
 				<div class="popup">
-					<p>Packaging and printing service.</p>
+					<p>Packaging design and printing.</p>
 				</div>
 			</div>
 			<div class="panel" id="panel-5">
 				<img src="./images/medical.png" />
 				<div class="popup">
-					<p>Biomedical research devices.</p>
+					<p>Medical equipment and supplies.</p>
 				</div>
 			</div>
 			<div class="panel" id="panel-6">
 				<img src="./images/luke.png" />
 				<div class="popup">
-					<p>Guestbook <br/> About...</p>
+					<p>Learn more and contact us.</p>
 				</div>
 			</div>
 		</div>
