--- a/index.html
+++ b/index.html
@@ -11,39 +11,45 @@
 		<div class="container">
 			<div class="panel" id="panel-1">
 				<img src="./images/elite.png" />
+				<a href="#">
 				<div class="popup">
 					<p>Welcome to Elite Luke Consulting.</p>
-				</div>
+				</div></a>
 			</div>
 			<div class="panel" id="panel-2">
 				<img src="./images/in-usa.png" />
+				<a href="./use">
 				<div class="popup">
 					<p>USA travel and tourism services.</p>
-				</div>
+				</div></a>
 			</div>
 			<div class="panel" id="panel-3">
 				<img src="./images/in-china.png" />
+				<a href="./china">
 				<div class="popup">
 					<p>China travel and tourism services.</p>
-				</div>
+				</div></a>
 			</div>
 			<div class="panel" id="panel-4">
 				<img src="./images/packaging.png" />
+				<a href="./packaging">
 				<div class="popup">
 					<p>Packaging design and printing.</p>
-				</div>
+				</div></a>
 			</div>
 			<div class="panel" id="panel-5">
 				<img src="./images/medical.png" />
+				<a href="./medical">
 				<div class="popup">
 					<p>Medical equipment and supplies.</p>
-				</div>
+				</div></a>
 			</div>
 			<div class="panel" id="panel-6">
 				<img src="./images/luke.png" />
+				<a href="./about">
 				<div class="popup">
-					<p>Learn more and contact us.</p>
-				</div>
+					<p>Learn more about us.</p>
+				</div></a>
 			</div>
 		</div>
 	</div>
