--- a/index.html
+++ b/index.html
@@ -11,14 +11,13 @@
 		<div class="container">
 			<div class="panel" id="panel-1">
 				<img src="./images/elite.png" />
-				<a href="#">
 				<div class="popup">
 					<p>Welcome to Elite Luke Consulting.</p>
-				</div></a>
+				</div>
 			</div>
 			<div class="panel" id="panel-2">
 				<img src="./images/in-usa.png" />
-				<a href="./use">
+				<a href="./usa">
 				<div class="popup">
 					<p>USA travel and tourism services.</p>
 				</div></a>
