--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 		<div class="container">
 			<h1><a href="./">Elite Luke</a></h1>
 			<ul>
-				<li><a href="./usa"></a>USA Tourism</a></li>
+				<li><a href="./usa">USA Tourism</a></li>
 				<li><a href="./china">China Tourism</a></li>
 				<li><a href="./packaging">Packaging and Printing</a></li>
 				<li><a href="./medical">Medical Supplies</a></li>
