--- a/index.html
+++ b/index.html
@@ -12,42 +12,42 @@
 			<div class="panel" id="panel-1">
 				<img src="./images/elite.png" />
 				<div class="popup">
-					<p>Welcome to Elite Luke Consulting.</p>
+					<p>您的满意是我们服务的宗旨!<br/>[Welcome to Elite Luke Consulting]</p>
 				</div>
 			</div>
 			<div class="panel" id="panel-2">
 				<img src="./images/in-usa.png" />
 				<a href="./usa">
 				<div class="popup">
-					<p>USA travel and tourism services.</p>
+					<p>北美旅游<br/>[Travel and Tourism in U.S.A.]</p>
 				</div></a>
 			</div>
 			<div class="panel" id="panel-3">
 				<img src="./images/in-china.png" />
 				<a href="./china">
 				<div class="popup">
-					<p>China travel and tourism services.</p>
+					<p>中国旅游<br/>[Travel and Tourism in China]</p>
 				</div></a>
 			</div>
 			<div class="panel" id="panel-4">
 				<img src="./images/packaging.png" />
 				<a href="./packaging">
 				<div class="popup">
-					<p>Packaging design and printing.</p>
+					<p>包装和打印<br/>[Packaging Design and Printing]</p>
 				</div></a>
 			</div>
 			<div class="panel" id="panel-5">
 				<img src="./images/medical.png" />
 				<a href="./medical">
 				<div class="popup">
-					<p>Medical equipment and supplies.</p>
+					<p>医疗设备<br/>[Medical Equipment and Supplies]</p>
 				</div></a>
 			</div>
 			<div class="panel" id="panel-6">
 				<img src="./images/luke.png" />
 				<a href="./about">
 				<div class="popup">
-					<p>Learn more about us.</p>
+					<p>欢迎联系<br/>[Contact and Learn More...]</p>
 				</div></a>
 			</div>
 		</div>
