--- a/china/index.html
+++ b/china/index.html
@@ -9,13 +9,16 @@
 <body>
 	<div id="header">
 		<div class="container">
-			<h1><a href="../">Elite Luke</a></h1>
-			<ul>
+			<img src="../logo.png" />
+			<ul id="services">
 				<li><a href="../usa">USA Tourism</a></li>
 				<li>China Tourism</li>
 				<li><a href="../packaging">Packaging and Printing</a></li>
 				<li><a href="../medical">Medical Supplies</a></li>
 				<li><a href="../about">About Us</a></li>
+			</ul>
+			<ul id="navi">
+				
 			</ul>
 		</div>
 	</div>
@@ -26,7 +29,7 @@
 	</div>
 	<div id="footer">
 		<div class="container">
-			<p>&copy; 2017 Elite Luke. All rights reserved. service@eliteluke.com</p>
+			<p>&copy; 2017 Elite Luke LLC. All rights reserved. service@eliteluke.com</p>
 		</div>
 	</div>
 </body>
