--- a/index.html
+++ b/index.html
@@ -9,44 +9,44 @@
 <body>
 	<div id="showcase">
 		<div class="container">
-			<div class="panel" id="panel-1">
+			<div class="panel">
 				<img src="./images/elite.png" />
-				<div class="popup">
+				<div>
 					<p>您的满意是我们服务的宗旨!<br/>[Welcome to Elite Luke Consulting]</p>
 				</div>
 			</div>
-			<div class="panel" id="panel-2">
+			<div class="panel">
 				<img src="./images/in-usa.png" />
 				<a href="./usa">
-				<div class="popup">
+				<div>
 					<p>北美旅游<br/>[Travel and Tourism in U.S.A.]</p>
 				</div></a>
 			</div>
-			<div class="panel" id="panel-3">
+			<div class="panel">
 				<img src="./images/in-china.png" />
 				<a href="./china">
-				<div class="popup">
+				<div>
 					<p>中国旅游<br/>[Travel and Tourism in China]</p>
 				</div></a>
 			</div>
-			<div class="panel" id="panel-4">
+			<div class="panel">
 				<img src="./images/packaging.png" />
 				<a href="./packaging">
-				<div class="popup">
-					<p>包装和打印<br/>[Packaging Design and Printing]</p>
+				<div>
+					<p>包装打印<br/>[Packaging Design and Printing]</p>
 				</div></a>
 			</div>
-			<div class="panel" id="panel-5">
-				<img src="./images/medical.png" />
-				<a href="./medical">
-				<div class="popup">
-					<p>医疗设备<br/>[Medical Equipment and Supplies]</p>
+			<div class="panel">
+				<img src="./images/research.png" />
+				<a href="./research">
+				<div>
+					<p>科研设备<br/>[Biomedical Equipment and Supplies]</p>
 				</div></a>
 			</div>
-			<div class="panel" id="panel-6">
+			<div class="panel">
 				<img src="./images/luke.png" />
 				<a href="./about">
-				<div class="popup">
+				<div>
 					<p>欢迎联系<br/>[Contact and Learn More...]</p>
 				</div></a>
 			</div>
@@ -54,7 +54,7 @@
 	</div>
 	<div id="footer">
 		<div class="container">
-			<p>&copy; 2017 Elite Luke. All rights reserved. service@eliteluke.com</p>
+			<p>&copy; 2017 Elite Luke LLC. All rights reserved. service@eliteluke.com</p>
 		</div>
 	</div>
 </body>
