--- a/research/index.html
+++ b/research/index.html
@@ -26,7 +26,7 @@
 	</div>
 	<div id="footer">
 		<div class="container">
-			<p>&copy; 2017 Elite Luke. All rights reserved. service@eliteluke.com</p>
+			<p>&copy; 2017 Elite Luke LLC. All rights reserved. service@eliteluke.com</p>
 		</div>
 	</div>
 </body>
