--- a/about.html
+++ b/about.html
@@ -4,29 +4,62 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 	<link rel="icon" type="image/png" href="/favicon.png">
 	<link rel="stylesheet" type="text/css" href="./style.css">
-	<title>Elite Luke - About Us</title>
+	<title>Elite Luke - About</title>
 </head>
 <body>
 	<div id="header">
 		<div class="container">
-			<h1><a href="./">Elite Luke</a></h1>
-			<ul>
-				<li><a href="./usa">USA Tourism</a></li>
-				<li><a href="./china">China Tourism</a></li>
-				<li><a href="./packaging">Packaging and Printing</a></li>
-				<li><a href="./medical">Medical Supplies</a></li>
-				<li>About Us</li>
-			</ul>
+			<a href="./"><img id="logo" src="./images/about.png" /></a>
+			<div id="menu">
+				<a href="./usa">
+				<div>
+					<img src="./images/in-usa.png" />
+					<p>北美旅游 [Tourism in USA]</p>
+				</div></a>
+				<a href="./china">
+				<div>
+					<img src="./images/in-china.png" />
+					<p>中国旅游 [Tourism in China]</p>
+				</div></a>
+				<a href="./packaging">
+				<div>
+					<img src="./images/packaging.png" />
+					<p>包装打印 [Packaging and Printing]</p>
+				</div></a>
+				<a href="./research">
+				<div>
+					<img src="./images/research.png" />
+					<p>科研设备 [Biomedical Equipment]</p>
+				</div></a>
+			</div>
 		</div>
 	</div>
 	<div id="main">
 		<div class="container">
-			
+			<div id="about">
+				<h2>About</h2>
+				<p>Elite Luke Consulting LLC was founded in the Unite State in 2016. We provide services on 
+				   tourism, packaging design and printing, biomedical research equipment, supplies, and business.
+				   Our goal is to take advantage of our professional skills and experience to build a market 
+				   connection to China and other countries. In the past years, we have established good relationship 
+				   of cooperation with Companies in China the fields of bioscience, packaging and printing, and 
+				   veterinary medcine.</p>
+				<p>Our team consists of members with Ph.D. degree or long-term professional experience in bioscience, 
+				   engineering, business startup and marketing.</p>
+			</div>
+			<div id="contact">
+				<p><span class="sub">Contact Address:</span> <br />
+					9773 Jupiter Forest Dr. <br />
+					Brentwood, TN 37027, USA</p>
+				<p><span class="sub">Email:</span> service@eliteluke.com <br />
+					<span class="sub">Phone:</span> +1 (615) 956-1414</p>
+				<img src="./images/contact.png">
+			</div> 
 		</div>
 	</div>
 	<div id="footer">
 		<div class="container">
-			<p>&copy; 2017 Elite Luke. All rights reserved. service@eliteluke.com</p>
+			<p>&copy; 2017 Elite Luke LLC. All rights reserved. service@eliteluke.com</p>
 		</div>
 	</div>
 </body>
