--- a/usa/index.html
+++ b/usa/index.html
@@ -4,18 +4,21 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 	<link rel="icon" type="image/png" href="/favicon.png">
 	<link rel="stylesheet" type="text/css" href="../style.css">
-	<title>Elite Luke - USA Travel and Tourism</title>
+	<title>Elite Luke - USA Tourism</title>
 </head>
 <body>
 	<div id="header">
 		<div class="container">
-			<h1><a href="../">Elite Luke</a></h1>
-			<ul>
-				<li>USA Tourism</li>
-				<li><a href="../china">China Tourism</a></li>
+			<img src="../logo.png" />
+			<ul id="services">
+				<li><a href="../usa">USA Tourism</a></li>
+				<li>China Tourism</li>
 				<li><a href="../packaging">Packaging and Printing</a></li>
 				<li><a href="../medical">Medical Supplies</a></li>
 				<li><a href="../about">About Us</a></li>
+			</ul>
+			<ul id="navi">
+				<li></li>
 			</ul>
 		</div>
 	</div>
@@ -26,7 +29,7 @@
 	</div>
 	<div id="footer">
 		<div class="container">
-			<p>&copy; 2017 Elite Luke. All rights reserved. service@eliteluke.com</p>
+			<p>&copy; 2017 Elite Luke LLC. All rights reserved. service@eliteluke.com</p>
 		</div>
 	</div>
 </body>
