--- a/about.html
+++ b/about.html
@@ -1,7 +1,6 @@
 <html lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 	<link rel="icon" type="image/png" href="/favicon.png">
 	<link rel="stylesheet" type="text/css" href="./style.css">
 	<title>Elite Luke - About</title>
@@ -9,8 +8,8 @@
 <body>
 	<div id="header">
 		<div class="container">
-			<a href="./"><img id="logo" src="./images/about.png" /></a>
-			<div id="menu">
+			<a href="./"><img id="logo" src="./images/logo-about.png" /></a>
+			<div id="about-menu">
 				<a href="./usa">
 				<div>
 					<img src="./images/in-usa.png" />
