--- a/packaging/index.html
+++ b/packaging/index.html
@@ -1,7 +1,6 @@
 <html lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 	<link rel="icon" type="image/png" href="/favicon.png">
 	<link rel="stylesheet" type="text/css" href="../style.css">
 	<title>Elite Luke - Packaging Design and Printing</title>
@@ -9,13 +8,17 @@
 <body>
 	<div id="header">
 		<div class="container">
-			<h1><a href="../">Elite Luke</a></h1>
-			<ul>
-				<li><a href="../usa">USA Tourisma</a></li>
-				<li><a href="../china">China Tourism</a></li>
-				<li>Packaging and Printing</li>
-				<li><a href="../medical">Medical Supplies</a></li>
-				<li><a href="../about">About Us</a></li>
+			<a href=".,/"><img id="logo" src="../images/logo-pack.png" /></a>
+			<p id="title"><a href="#">包装设计和打印</a></p>		
+			<ul id="navi">
+				<li><a href="../usa">北美旅游 [Tourism in USA]</a></li>
+				<li><a href="../china">中国旅游 [Tourism in China]</a></li>
+				<li><a href="../research">科研设备 [Biomedical Equipment]</a></li>
+			</ul>
+			<ul id="menu">
+				<li><a href="./paper">包装纸 [Wrapping Paper]</a></li>
+				<li><a href="./label">贴纸标签[Sticker Labels]</a></li>
+				<li><a href="./tag">吊牌[Hang tags]</a></li>
 			</ul>
 		</div>
 	</div>
