packaging and printing page'

--- a/packaging/label.html
+++ b/packaging/label.html
@@ -3,13 +3,13 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<link rel="icon" type="image/png" href="/favicon.png">
 	<link rel="stylesheet" type="text/css" href="../style.css">
-	<title>Elite Luke - Packaging and Printing</title>
+	<title>Elite Luke - Packaging and Printing - Sticker Labels</title>
 </head>
 <body>
 	<div id="header">
 		<div class="container">
-			<a href="#"><img id="logo" src="../images/logo-pack.png" /></a>
-			<a href="#"><p id="title" class="current">包装设计和打印</p></a>	
+			<a href="./"><img id="logo" src="../images/logo-pack.png" /></a>
+			<a href="./"><p id="title">包装设计和打印</p></a>	
 			<ul id="navi">
 				<a href="../"><li>首页 [Elite Luke]</li></a>
 				<a href="../usa"><li>北美旅游 [Tourism in USA]</li></a>
@@ -18,24 +18,15 @@
 			</ul>
 			<ul id="menu">
 				<a href="./paper"><li>包装纸 [Wrapping Paper]</li></a>
-				<a href="./label"><li>贴纸标签[Sticker Labels]</li></a>
+				<a href="#"><li class="current">贴纸标签[Sticker Labels]</li></a>
 				<a href="./tag"><li>吊牌[Hang tags]</li></a>
 			</ul>
 		</div>
 	</div>
 	<div id="main">
 		<div class="container">
-			<p>We are nominated by packaging and printing company as an authorized representative of overseas 
-			   markets, and had been sucessfully picked up as brand supplier for Clarks, Ecco, ASH, CK, Coach, 
-			   KENZO, MK, JF and so on. The Logo as following.</p>
-			<img src="./images/printing.jpg" />
-			<p>Currently, Our agent products include four kinds of commodities:</p>
-			<ol>
-				<li>Wrapping Tissue Paper</li>
-				<li>Silk Paper</li>
-				<li>Label Stickers</li>
-				<li>Hang Tag</li>
-			</ol>
+			<h1>Sticker Labels</h1>
+			
 		</div>
 	</div>
 	<div id="footer">
