--- a/usa/index.html
+++ b/usa/index.html
@@ -11,8 +11,8 @@
 		<div class="container">
 			<img src="../logo.png" />
 			<ul id="services">
-				<li><a href="../usa">USA Tourism</a></li>
-				<li>China Tourism</li>
+				<li><a href="../usa">北美旅游</a></li>
+				<li>中国旅游</li>
 				<li><a href="../packaging">Packaging and Printing</a></li>
 				<li><a href="../medical">Medical Supplies</a></li>
 				<li><a href="../about">About Us</a></li>
