--- a/china/index.html
+++ b/china/index.html
@@ -4,21 +4,21 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 	<link rel="icon" type="image/png" href="/favicon.png">
 	<link rel="stylesheet" type="text/css" href="../style.css">
-	<title>Elite Luke - China Travel and Tourism</title>
+	<title>Elite Luke - Tourism in China</title>
 </head>
 <body>
 	<div id="header">
 		<div class="container">
-			<img src="../logo.png" />
-			<ul id="services">
-				<li><a href="../usa">USA Tourism</a></li>
-				<li>China Tourism</li>
-				<li><a href="../packaging">Packaging and Printing</a></li>
-				<li><a href="../medical">Medical Supplies</a></li>
-				<li><a href="../about">About Us</a></li>
-			</ul>
+			<a href="#"><img id="logo" src="../images/logo-china.png" /></a>
+			<a href="#"><p id="title" class="current">中国旅游</p></a>	
 			<ul id="navi">
-				<li></li>
+				<a href="../"><li>首页 [Elite Luke]</li></a>
+				<a href="../usa"><li>北美旅游 [Tourism in USA]</li></a>
+				<a href="../packaging"><li>包装打印 [Packaging and Printing]</li></a>
+				<a href="../research"><li>科学研究 [Biomedical Research]</li></a>
+			</ul>
+			<ul id="menu">
+				<a href="#"><li>旅游路线 [Travel Plans]</li></a>
 			</ul>
 		</div>
 	</div>
