--- a/research/index.html
+++ b/research/index.html
@@ -4,24 +4,27 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 	<link rel="icon" type="image/png" href="/favicon.png">
 	<link rel="stylesheet" type="text/css" href="../style.css">
-	<title>Elite Luke - Medical Equipment and Supplies</title>
+	<title>Elite Luke - Biomedical Research</title>
 </head>
 <body>
 	<div id="header">
 		<div class="container">
-			<h1><a href="../">Elite Luke</a></h1>
-			<ul>
-				<li><a href="../usa">USA Tourism</a></li>
-				<li><a href="../china">China Tourism</a></li>
-				<li><a href="../packaging">Packaging and Printing</a></li>
-				<li>Medical Supplies</li>
-				<li><a href="../about">About Us</a></li>
+			<a href="#"><img id="logo" src="../images/logo-research.png" /></a>
+			<a href="#"><p id="title">生物医学研究</p></a>	
+			<ul id="navi">
+				<a href="../"><li>首页 [Elite Luke]</li></a>
+				<a href="../usa"><li>北美旅游 [Tourism in USA]</li></a>
+				<a href="../china"><li>中国旅游 [Tourism in China]</li></a>
+				<a href="../packaging"><li>包装打印 [Packaging and Printing]</li></a>
+			</ul>
+			<ul id="menu">
+				<a href="#"><li class="current">多肽合成 [Peptide Synthesis]</li></a>
 			</ul>
 		</div>
 	</div>
 	<div id="main">
 		<div class="container">
-			
+			<h1>Peptide Synthesizer</h1>
 		</div>
 	</div>
 	<div id="footer">
