--- a/usa/index.html
+++ b/usa/index.html
@@ -9,22 +9,22 @@
 <body>
 	<div id="header">
 		<div class="container">
-			<img src="../logo.png" />
-			<ul id="services">
-				<li><a href="../usa">北美旅游</a></li>
-				<li>中国旅游</li>
-				<li><a href="../packaging">Packaging and Printing</a></li>
-				<li><a href="../medical">Medical Supplies</a></li>
-				<li><a href="../about">About Us</a></li>
-			</ul>
+			<a href="#"><img id="logo" src="../images/logo-usa.png" /></a>
+			<a href="#"><p id="title" class="current">北美旅游</p></a>	
 			<ul id="navi">
-				<li></li>
+				<a href="../"><li>首页 [Elite Luke]</li></a>
+				<a href="../china"><li>中国旅游 [Tourism in China]</li></a>
+				<a href="../packaging"><li>包装打印 [Packaging and Printing]</li></a>
+				<a href="../research"><li>科学研究 [Biomedical Research]</li></a>
+			</ul>
+			<ul id="menu">
+				<a href="#"><li>旅游路线 [Travel Plans]</li></a>
 			</ul>
 		</div>
 	</div>
 	<div id="main">
 		<div class="container">
-			
+			<h1>北美旅游</h1>
 		</div>
 	</div>
 	<div id="footer">
