--- a/usa/index.html
+++ b/usa/index.html
@@ -4,6 +4,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 	<link rel="icon" type="image/png" href="/favicon.png">
 	<link rel="stylesheet" type="text/css" href="../style.css">
+	<link rel="stylesheet" type="text/css" href="./style.css">
 	<title>Elite Luke - USA Tourism</title>
 </head>
 <body>
@@ -15,16 +16,23 @@
 				<a href="../"><li>首页 [Elite Luke]</li></a>
 				<a href="../china"><li>中国旅游 [Tourism in China]</li></a>
 				<a href="../packaging"><li>包装打印 [Packaging and Printing]</li></a>
-				<a href="../research"><li>科学研究 [Biomedical Research]</li></a>
+				<a href="../research"><li>生物科学 [Bioscience Research]</li></a>
 			</ul>
 			<ul id="menu">
-				<a href="#"><li>旅游路线 [Travel Plans]</li></a>
+				<a href="./southeast"><li>美国东南自助游 [Southeast USA]</li></a>
 			</ul>
 		</div>
 	</div>
 	<div id="main">
 		<div class="container">
-			<h1>北美旅游</h1>
+			<img class="logo" src="./images/elc.png" />
+			<h1>您的满意是我们服务的宗旨！</h1>
+			<p>ELC是在美国音乐之城——纳什维尔注册的集旅游服务、礼品包装、财务咨询、和科研设备进出口贸易为一体的咨询服务公司。
+				在旅游方面，我们专注以个人和家庭为单位的特色旅游服务。我们坚信：游历使生活更美好。我们的服务立足美国东南部，
+				辐射美国及北美全境，根据需求和喜好选择景点，设置行程。旅途中，除了自然风光和历史陈迹，我们也安排参加当地的
+				特色庆典活动，安排进入当地人及华人的家庭聚餐。观光之旅融入文化之行，给你带来视觉和心灵的双重旅行。除每天
+				必要休息时间外，我们只对行程提供建设性意见，与游客讨论，并由游客作主安排最终行程。</p>
+			<p>我们欢迎个人游客直接与我们联系讨论旅游计划，也欢迎国内各类旅游服务机构联系我们洽谈合作。</p>
 		</div>
 	</div>
 	<div id="footer">
