--- a/packaging/paper.html
+++ b/packaging/paper.html
@@ -3,6 +3,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<link rel="icon" type="image/png" href="/favicon.png">
 	<link rel="stylesheet" type="text/css" href="../style.css">
+	<link rel="stylesheet" type="text/css" href="./style.css">
 	<title>Elite Luke - Packaging and Printing - Wrapping Paper</title>
 </head>
 <body>
